# umdloop_gui

./: .gitattributes  .gitignore  .gitmodules  README.md  package-lock.json
archive/umdloop_gui_native/: CMakeLists.txt  build.sh  camera_toggle.py  yolo_live_logger.py
archive/umdloop_gui_native/src/: CameraWidget.cpp  CameraWidget.h  CamerasPage.cpp  CamerasPage.h  Constants.h  GenericPage.cpp  GenericPage.h  LoopGui.cpp  LoopGui.h  NavigationBar.cpp  NavigationBar.h  ROS2EntitiesPage.cpp  ROS2EntitiesPage.h  SubsystemWidget.cpp  SubsystemWidget.h  main.cpp
camera-streaming-backend/: .gitignore  CMakeLists.txt  README.md  asyncapi.yaml  missions.json  run.sh
camera-streaming-backend/include/: CameraConfig.hpp  CameraManager.hpp  CameraPipeline.hpp  MissionConfig.hpp  MissionManager.hpp  PlatformDetect.hpp  WsServer.hpp
camera-streaming-backend/src/: CameraManager.cpp  CameraPipeline.cpp  MissionManager.cpp  WsServer.cpp  main.cpp
camera-streaming-backend/web/: index.html
umdloop_gui_web/: dev_server.py  mock_rosbridge.py  package-lock.json  package.json  pyproject.toml  requirements.txt  ros_bridge.py  server.py  vitest.config.js
umdloop_gui_web/.hypothesis/constants/: 02c5ee843f1e779f  0317efbdc48c19e4  060cd632852cd4f0  06a4925cb72cb20f  0736e2d4acddd01a  09eb4940fceb4289  0a271b1f7519ead8  0abe41ac03c20672  0b7df5c82b002702  16e539835dc53917  173585c19ff33049  19ba8243ad91372e  1b78938ff281c989  1bec7b197bc24b43  1cce0c53a0aa1633  1e38b2f28b135017  244e9de35e10ae95  24d9ef7ab862d8ac  25d4f01ec0edb0c0  2886757575788a8d  2b073b4000ac976c  2e9f38f14c51ee65  2ea31a19b0cb7144  2ec8564e9c428613  2f49888d399714a6  2f5600e416e2b630  2fda912527187aee  30c867b5caa44e2b  31df2cc2af71f98d  3ba9113f94abcf32  3d0c53f7cb872e2c  3e091f9f6ff04a62  4042fd565bd602f6  44971ea411745967  473733f46539682d  4757c90ef56eb84f  49120bbcf94ea5be  49dbff769e7e1ccb  4b25d93f43291efe  4bf036f2b1da8e0d  (+88 more)
umdloop_gui_web/app/: RoverStateDashboard.js  battery.js  config.js  globals.css  layout.js  page.js
umdloop_gui_web/app/GUI functions/: ArmOperatorTab.js  CameraFeed.js  CameraManagerModal.js  DriveOperatorTab.js  MapView.js  MissionPanel.js  Navigation.js  NavigationBar.js  OperationsWall.js  OperatorTab.js  PageContent.js  RoverStateDashboard.js  ScienceMonitor.js  SubsystemBar.js  TechnicianDashboard.js  WebRtcCameraVideo.js  pageConstants.js  useCameraStreams.js
umdloop_gui_web/app/cameras/: CameraFeed.js  index.js
umdloop_gui_web/app/components/: DynamicTitle.js  MapView.js  Minimap.js  RadioLossBanner.js  (+1 more)
umdloop_gui_web/backend/: __main__.py  app.py  config.py
umdloop_gui_web/scripts/: add_region.py  build_pmtiles.py  download_tiles.py
umdloop_gui_web/spectrometer/: RamanPlot.jsx  raman_backend.py
umdloop_gui_web/tests/: conftest.py
(+187 files in other folders)
