[project]
name = "umdloop-gui-backend"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    "opencv-python>=4.8.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
    "websockets>=11.0.0",
    "ramanspy>=0.2.0",
    "numpy>=1.21.0,<2",
    "scipy>=1.7.0",
    "ultralytics",
]
